# slabtastic-rs

./: .gitignore  Cargo.toml  README.md  critcmp.md
benches/: throughput.rs
design/: slabtastic.md
docs/: index.md
docs/design/: slabtastic.md
docs/explanation/: append-only.md  concurrency.md  why-slabtastic.md
docs/how-to/: append-data.md  bulk-read-write.md  cli-maintenance.md  page-sizing.md
docs/reference/: cli.md  errors.md  footer-format.md  page-layout.md  pages-page.md  wire-format.md
docs/tutorials/: getting-started.md  streaming-io.md
src/: config.rs  constants.rs  error.rs  footer.rs  lib.rs  main.rs  page.rs  pages_page.rs  reader.rs  writer.rs
src/cli/: analyze.rs  append.rs  check.rs  explain.rs  export.rs  get.rs  import.rs  info.rs  mod.rs  ordinal_range.rs  reorder.rs  repack.rs  rewrite.rs
tests/: adversarial.rs  integration.rs  large_scale.rs
